# serializer version: 1
# name: test_color_palette_state[rgb-select.wled_rgb_light_live_override-2-live-called_with1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Live override',
      'options': list([
        '0',
        '1',
        '2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgb_light_live_override',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_live_override-2-live-called_with1].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '0',
        '1',
        '2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.wled_rgb_light_live_override',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Live override',
    'platform': 'wled',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'live_override',
    'unique_id': 'aabbccddeeff_live_override',
    'unit_of_measurement': None,
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_live_override-2-live-called_with1].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_subentries': <ANY>,
    'configuration_url': 'http://127.0.0.1',
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:ff',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': 'esp32',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'wled',
        'aabbccddeeff',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'WLED',
    'model': 'FOSS',
    'model_id': None,
    'name': 'WLED RGB Light',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '0.14.4',
    'via_device_id': None,
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_segment_1_color_palette-Icefire-segment-called_with0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Segment 1 color palette',
      'options': list([
        'Default',
        '* Random Cycle',
        '* Color 1',
        '* Colors 1&2',
        '* Color Gradient',
        '* Colors Only',
        'Party',
        'Cloud',
        'Lava',
        'Ocean',
        'Forest',
        'Rainbow',
        'Rainbow Bands',
        'Sunset',
        'Rivendell',
        'Breeze',
        'Red & Blue',
        'Yellowout',
        'Analogous',
        'Splash',
        'Pastel',
        'Sunset 2',
        'Beach',
        'Vintage',
        'Departure',
        'Landscape',
        'Beech',
        'Sherbet',
        'Hult',
        'Hult 64',
        'Drywet',
        'Jul',
        'Grintage',
        'Rewhi',
        'Tertiary',
        'Fire',
        'Icefire',
        'Cyane',
        'Light Pink',
        'Autumn',
        'Magenta',
        'Magred',
        'Yelmag',
        'Yelblu',
        'Orange & Teal',
        'Tiamat',
        'April Night',
        'Orangery',
        'C9',
        'Sakura',
        'Aurora',
        'Atlantica',
        'C9 2',
        'C9 New',
        'Temperature',
        'Aurora 2',
        'Retro Clown',
        'Candy',
        'Toxy Reaf',
        'Fairy Reaf',
        'Semi Blue',
        'Pink Candy',
        'Red Reaf',
        'Aqua Flash',
        'Yelblu Hot',
        'Lite Light',
        'Red Flash',
        'Blink Red',
        'Red Shift',
        'Red Tide',
        'Candy2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgb_light_segment_1_color_palette',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '* Random Cycle',
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_segment_1_color_palette-Icefire-segment-called_with0].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Default',
        '* Random Cycle',
        '* Color 1',
        '* Colors 1&2',
        '* Color Gradient',
        '* Colors Only',
        'Party',
        'Cloud',
        'Lava',
        'Ocean',
        'Forest',
        'Rainbow',
        'Rainbow Bands',
        'Sunset',
        'Rivendell',
        'Breeze',
        'Red & Blue',
        'Yellowout',
        'Analogous',
        'Splash',
        'Pastel',
        'Sunset 2',
        'Beach',
        'Vintage',
        'Departure',
        'Landscape',
        'Beech',
        'Sherbet',
        'Hult',
        'Hult 64',
        'Drywet',
        'Jul',
        'Grintage',
        'Rewhi',
        'Tertiary',
        'Fire',
        'Icefire',
        'Cyane',
        'Light Pink',
        'Autumn',
        'Magenta',
        'Magred',
        'Yelmag',
        'Yelblu',
        'Orange & Teal',
        'Tiamat',
        'April Night',
        'Orangery',
        'C9',
        'Sakura',
        'Aurora',
        'Atlantica',
        'C9 2',
        'C9 New',
        'Temperature',
        'Aurora 2',
        'Retro Clown',
        'Candy',
        'Toxy Reaf',
        'Fairy Reaf',
        'Semi Blue',
        'Pink Candy',
        'Red Reaf',
        'Aqua Flash',
        'Yelblu Hot',
        'Lite Light',
        'Red Flash',
        'Blink Red',
        'Red Shift',
        'Red Tide',
        'Candy2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.wled_rgb_light_segment_1_color_palette',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Segment 1 color palette',
    'platform': 'wled',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'segment_color_palette',
    'unique_id': 'aabbccddeeff_palette_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_color_palette_state[rgb-select.wled_rgb_light_segment_1_color_palette-Icefire-segment-called_with0].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_subentries': <ANY>,
    'configuration_url': 'http://127.0.0.1',
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:ff',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': 'esp32',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'wled',
        'aabbccddeeff',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'WLED',
    'model': 'FOSS',
    'model_id': None,
    'name': 'WLED RGB Light',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '0.14.4',
    'via_device_id': None,
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_playlist-Playlist 2-playlist-called_with2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGBW Light Playlist',
      'options': list([
        'Playlist 1',
        'Playlist 2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgbw_light_playlist',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_playlist-Playlist 2-playlist-called_with2].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Playlist 1',
        'Playlist 2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.wled_rgbw_light_playlist',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Playlist',
    'platform': 'wled',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'playlist',
    'unique_id': 'aabbccddeeff_playlist',
    'unit_of_measurement': None,
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_playlist-Playlist 2-playlist-called_with2].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_subentries': <ANY>,
    'configuration_url': 'http://127.0.0.1',
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:ff',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': 'esp32',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'wled',
        'aabbccddeeff',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'WLED',
    'model': 'FOSS',
    'model_id': None,
    'name': 'WLED RGBW Light',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '0.99.0b1',
    'via_device_id': None,
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_preset-Preset 2-preset-called_with3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGBW Light Preset',
      'options': list([
        'Preset 1',
        'Preset 2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgbw_light_preset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_preset-Preset 2-preset-called_with3].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Preset 1',
        'Preset 2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.wled_rgbw_light_preset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Preset',
    'platform': 'wled',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'preset',
    'unique_id': 'aabbccddeeff_preset',
    'unit_of_measurement': None,
  })
# ---
# name: test_color_palette_state[rgbw-select.wled_rgbw_light_preset-Preset 2-preset-called_with3].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_subentries': <ANY>,
    'configuration_url': 'http://127.0.0.1',
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:ff',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': 'esp32',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'wled',
        'aabbccddeeff',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'WLED',
    'model': 'FOSS',
    'model_id': None,
    'name': 'WLED RGBW Light',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '0.99.0b1',
    'via_device_id': None,
  })
# ---
